# upw_charles

./: .gitmodules  README.md
cellular-monitor - Copy/: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  notes.txt  pm_static.yml  prj.conf  sysbuild.conf
cellular-monitor - Copy/boards/: actinius_icarus_ns.overlay  commission.conf  debug.conf  nowi_board_v0.4.overlay  nowi_cellular_nrf9151_pipe_monitor.overlay  nrf9160dk_nrf9160_ns.overlay  pipe_monitor.conf  pulse.conf  release.conf  simulated.conf
cellular-monitor - Copy/boards/arm/nowi_cellular/: Kconfig.board  Kconfig.defconfig  board.cmake  nowi_cellular.dts  nowi_cellular.yaml  nowi_cellular_common-pinctrl.dtsi  nowi_cellular_common.dts  nowi_cellular_defconfig  nowi_cellular_ns.dts  nowi_cellular_ns.yaml  nowi_cellular_ns_defconfig  nowi_cellular_partition_conf.dts
cellular-monitor - Copy/boards/arm/nowi_cellular_nrf9151/: Kconfig.board  Kconfig.defconfig  Kconfig.nowi_cellular_nrf9151  board.cmake  board.yml  nowi_cellular_nrf9151-partitioning.dtsi  nowi_cellular_nrf9151_common-pinctrl.dtsi  nowi_cellular_nrf9151_common.dtsi  nowi_cellular_nrf9151_nrf9151.dts  nowi_cellular_nrf9151_nrf9151_defconfig  nowi_cellular_nrf9151_nrf9151_ns.dts  nowi_cellular_nrf9151_nrf9151_ns_defconfig  pre_dt_board.cmake
cellular-monitor - Copy/boards/sadadasd/test-board/: Kconfig.defconfig  Kconfig.test-board  board.cmake  board.yml  test-board-partitioning.dtsi  test-board.dts  test-board.yml  test-board_defconfig  test-board_ns.dts  test-board_ns.yml
cellular-monitor - Copy/certs/: claim_certs.h
cellular-monitor - Copy/src/: at_handler.c  at_handler.h  button_manager.c  button_manager.h  interaction_manager.c  interaction_manager.h  main.c
cellular-monitor - Copy/src/algorithm/: app.c  app.h  error_handler.c  flash_utility.c  hw.c  hw_gpio.c  log_handler.c  log_handler.h  log_implementation.h  magnetometer.c
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/: .gitignore  README.md
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/algorithm/: algorithm.h  do_nothing_algorithm.c  follower_algorithm.c  follower_algorithm.h  logger_algorithm.c  logger_algorithm.h  poll_and_int_algorithm.c  polling_algorithm.h  pulse_tracker.c  pulse_tracker.h  sensus_protocol_app.c  sensus_protocol_app.h  signal_tracker.c  signal_tracker.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/algorithm/utilities/: axis_configuration.h  axis_configuration_utility.c  axis_configuration_utility.h  communication_monitor.c  communication_monitor.h  cycle_counter.c  cycle_counter.h  lowest_flow_over_period_tracker.c  lowest_flow_over_period_tracker.h  magnetometer_controller.c  magnetometer_controller.h  noise_monitor.c  noise_monitor.h  signal_history.c  signal_history.h  timeServer.c  timeServer.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/drivers/: bsp.h  component.h  magnetometer.h  sensor.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/drivers/lis2mdl/: LIS2MDL_MAG_driver.c  LIS2MDL_MAG_driver.h  LIS2MDL_MAG_driver_HL.c  LIS2MDL_MAG_driver_HL.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/filters/: FIRFilter.c  FIRFilter.h  filter_common.h  so_butterworth_hpf.c  so_butterworth_hpf.h  so_hpf.c  so_hpf.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/interfaces/: algo_hw.h  error_handler.h  flash_utility.h  log.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/tests/mocked/: debug.c  flash_utility.c  hw.c  hw_gpio.c  log_implementation.h  mocked_app.c  mocked_app.h  signal.c  signal.h  simulation.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/tests/mocked/drivers/: bsp.c  magnetometer.c  simulated_MAG_driver_HL.c  simulated_MAG_driver_HL.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/tests/mocked/utilities/: utilities.h
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/tests/module/: filterTest.c  main.c  makefile  run.sh  runFilterTest.sh  runLogger.sh
cellular-monitor - Copy/src/algorithm/building-monitor-algorithm/tests/unit/: CMakeLists.txt  axis_configuration_utility_test.cc  build.sh  cycle_counter_test.cc  signal_history_test.cc
cellular-monitor - Copy/src/buzzer/: buzzer.c  buzzer.h
cellular-monitor - Copy/src/cloud/: cloud.c  cloud.h  codec.c  codec.h
cellular-monitor - Copy/src/led/: led_manager.c  led_manager.h
cellular-monitor - Copy/src/protobuf/: filedescriptor.desc  generateMessageDescriptor.sh  lambda_function.py  msg.proto  pushFileDescriptoToS3.sh
cellular-monitor - Copy/src/twi/: twi_driver.c  twi_driver.h
cellular-monitor - Copy/src/utils/: utils.h
cellular-monitor - Copy/src/wdt/: wdt.c  wdt.h
cellular-monitor - Copy/sysbuild/: mcuboot.conf
cellular-monitor - Copy/tools/: README.md  build_configs.txt  lambda_function.py  provision.py  pushToCloud.sh  update_commissioning_apps.sh
